Attempting to solve Boost dependency error on Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ compiler:
   - gcc
 
 before_script:
+  - sudo apt-get update -qq
+  - sudo apt-get insatll libboost-dev
   - mkdir build
   - cd build
   - cmake ..
