--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler:
 
 before_script:
   - sudo apt-get update -qq
-  - sudo apt-get insatll libboost-dev
+  - sudo apt-get install libboost-dev
   - mkdir build
   - cd build
   - cmake ..
