--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,18 @@ language: cpp
 
 compiler:
   - gcc
-
-before_script:
+  
+before_install:
+  # We need this line to have g++4.8 available in apt
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
+install:
+  - sudo apt-get install -qq gcc-4.8 g++-4.8 
+  # We want to compile with g++ 4.8 when rather than the default g++
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
   - sudo apt-get install libboost-dev
+  
+before_script:
   - mkdir build
   - cd build
   - cmake ..
