Added simple cli tool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,14 @@ SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
 	VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}"
 	OUTPUT_NAME ${PROJECT_NAME}
 	CLEAN_DIRECT_OUTPUT 1)
-
+	
+ADD_EXECUTABLE(${PROJECT_NAME}-cli app/PngCheckerApp.cxx)
+TARGET_LINK_LIBRARIES(${PROJECT_NAME}-cli ${PROJECT_NAME} ${${PROJECT_NAME}_LIBS})
+SET_TARGET_PROPERTIES(${PROJECT_NAME}-cli PROPERTIES
+	VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}"
+	OUTPUT_NAME ${PROJECT_NAME}
+	CLEAN_DIRECT_OUTPUT 1)
+	
 if (BUILD_DOCUMENTATION)
     ADD_SUBDIRECTORY(doc)
 endif ()
