--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: cpp
 
 compiler:
   - gcc
-  
+
+cache: apt
+
 before_install:
   # We need this line to have g++4.8 available in apt
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
