--- a/tests/systemtests/CMakeLists.txt
+++ b/tests/systemtests/CMakeLists.txt
@@ -18,17 +18,17 @@
 
 project(systemtests CXX)
 
-include_directories("../../src" ${CMAKE_CURRENT_BINARY_DIR} ${GTEST_BOTH_INCLUDE_DIRS})
+include_directories("../../src" ${CMAKE_CURRENT_BINARY_DIR} ${GTEST_INCLUDE_DIRS})
 
 FILE (GLOB_RECURSE test_SRCS *.cxx)
 
 ADD_EXECUTABLE(${PROJECT_NAME} ${test_SRCS})
 SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
-add_dependencies(${PROJECT_NAME} googlemock)
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_PROJECT_NAME} ${${CMAKE_PROJECT_NAME}_LIBS} ${GMOCK_LIBRARY} pthread)
+add_dependencies(${PROJECT_NAME} googletest)
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_PROJECT_NAME} ${${CMAKE_PROJECT_NAME}_LIBS} ${GTEST_LIBRARIES} pthread)
 
 if (BUILD_GTEST_FILTER)
-    SET(GTEST_FILTER --gtest_filter=${BUILD_GTEST_FILTER}) 
+    SET(GTEST_FILTER --gtest_filter=${BUILD_GTEST_FILTER})
 endif ()
 
 # Example .png file
@@ -37,8 +37,8 @@ CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/example.png" ${EXAMPLE_PNG_FILE} COP
 CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/SystemTestConstantsGenerated.h.in" "${CMAKE_CURRENT_BINARY_DIR}/SystemTestConstantsGenerated.h")
 
 ADD_CUSTOM_TARGET(systemtest
-    COMMAND "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}${CMAKE_EXECUTABLE_SUFFIX}" "--gtest_output=xml"	
+    COMMAND "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}${CMAKE_EXECUTABLE_SUFFIX}" "--gtest_output=xml"
     ${GTEST_FILTER}
-    DEPENDS ${PROJECT_NAME} googlemock
+    DEPENDS ${PROJECT_NAME}
     COMMENT "Executing system tests..."
     VERBATIM SOURCES ${test_SRCS})
