--- a/tests/unittests/CMakeLists.txt
+++ b/tests/unittests/CMakeLists.txt
@@ -24,22 +24,22 @@ if (POLICY CMP0037)
     cmake_policy(SET CMP0037 OLD)
 endif ()
 
-IF (NOT CMAKE_CROSSCOMPILING)    
-    include_directories("../../src/" "../../include" ${GTEST_BOTH_INCLUDE_DIRS})
-    
+IF (NOT CMAKE_CROSSCOMPILING)
+    include_directories("../../src/" "../../include" ${GTEST_INCLUDE_DIRS})
+
     FILE (GLOB_RECURSE test_SRCS *.cxx)
 
     ADD_EXECUTABLE(${PROJECT_NAME} ${test_SRCS})
     SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
-    add_dependencies(${PROJECT_NAME} googlemock)
-    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_PROJECT_NAME} ${${CMAKE_PROJECT_NAME}_LIBS} ${GMOCK_LIBRARY} pthread
+    add_dependencies(${PROJECT_NAME} googletest)
+    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_PROJECT_NAME} ${${CMAKE_PROJECT_NAME}_LIBS} ${GTEST_LIBRARIES} pthread
     )
-   
+
     if (BUILD_GTEST_FILTER)
-        SET(GTEST_FILTER --gtest_filter=${BUILD_GTEST_FILTER}) 
+        SET(GTEST_FILTER --gtest_filter=${BUILD_GTEST_FILTER})
     endif ()
-   
-    ADD_CUSTOM_TARGET(test "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}${CMAKE_EXECUTABLE_SUFFIX}" 
+
+    ADD_CUSTOM_TARGET(test "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}${CMAKE_EXECUTABLE_SUFFIX}"
         --gtest_output=xml
         ${GTEST_FILTER}
         DEPENDS ${PROJECT_NAME}
